docs/api/qiskit-ibm-runtime/0.25/options-environment-options.mdx
---
title: EnvironmentOptions (v0.25)
description: API reference for qiskit_ibm_runtime.options.EnvironmentOptions in qiskit-ibm-runtime v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.EnvironmentOptions
---

# EnvironmentOptions

<Class id="qiskit_ibm_runtime.options.EnvironmentOptions" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.25/qiskit_ibm_runtime/options/environment_options.py#L28-L52" signature="EnvironmentOptions(*args, **kwargs)" modifiers="class">
  Options related to the execution environment. This applies to both V1 and V2 primitives.

  **Parameters**

  *   **log\_level** – logging level to set in the execution environment. The valid log levels are: `DEBUG`, `INFO`, `WARNING`, `ERROR`, and `CRITICAL`. Default: `WARNING`.

  *   **callback** –

      Callback function to be invoked for any interim results and final result. The callback function will receive 2 positional parameters:

      > 1.  Job ID
      > 2.  Job result.

      Default: `None`.

  *   **job\_tags** – Tags to be assigned to the job. The tags can subsequently be used as a filter in the `qiskit_ibm_runtime.qiskit_runtime_service.jobs()` function call. Default: `None`.

  ## Attributes

  ### callback

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.callback" attributeTypeHint="Callable | None" attributeValue="None" />

  ### job\_tags

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.job_tags" attributeTypeHint="List | None" attributeValue="None" />

  ### log\_level

  <Attribute id="qiskit_ibm_runtime.options.EnvironmentOptions.log_level" attributeTypeHint="Literal['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL']" attributeValue="'WARNING'" />

  ## Methods
</Class>

